# memo_cli_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: config.rs  editor.rs  error.rs  frontmatter_parser.rs  init.rs  io.rs  load.rs  main.rs  memo_list.rs  parser.rs  vim.rs
src/commands/: copy.rs  edit.rs  grep.rs  info.rs  list.rs  mod.rs  new.rs  remove.rs  view.rs
src/server/: memo_block.rs  mod.rs  open_browser.rs
src/server/asset/: index.html
src/server/template/: 404.html  index.html  index.rs  memo.html  memo.rs  mod.rs  notfound.rs  style.css  style.rs
