[package]
name = "memos_cli"
version = "0.1.0"
authors = ["aiwaka"]
# license-file = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16"
chrono = "0.4"
unicode-width = "0.1"
toml = "0.5"
regex = "1.6"
percent-encoding = "2.2"
pulldown-cmark = "0.9"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
home-dir = "*"
dotenv = "0.15"

[dev-dependencies]
